add support for coq2html documentation

--- a/Makefile.coq.local
+++ b/Makefile.coq.local
@@ -3,10 +3,12 @@ CSSFILES = resources/coqdoc.css resources/coqdocjs.css
 JSFILES = resources/config.js resources/coqdocjs.js
 HTMLFILES = resources/header.html resources/footer.html
 COQDOCDIR = docs/coqdoc
-
 COQDOCHTMLFLAGS = --toc --toc-depth 2 --index indexpage --html \
   --interpolate --no-lib-name --parse-comments \
   --with-header resources/header.html --with-footer resources/footer.html
+COQ2HTML = coq2html
+COQ2HTMLDIR = docs/coq2html
+COQ2HTMLFLAGS = -base CoindTraces
 
 coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES)
 	$(SHOW)'COQDOC -d $(COQDOCDIR)'
@@ -15,3 +17,9 @@ coqdoc: $(GLOBFILES) $(VFILES) $(CSSFILES) $(JSFILES) $(HTMLFILES)
 	$(SHOW)'COPY resources'
 	$(HIDE)cp $(CSSFILES) $(JSFILES) $(COQDOCDIR)
 .PHONY: coqdoc
+
+coq2html: $(GLOBFILES) $(VFILES)
+	$(SHOW)'COQ2HTML -d $(COQ2HTMLDIR)'
+	$(HIDE)mkdir -p $(COQ2HTMLDIR)
+	$(HIDE)cd theories && $(COQ2HTML) $(COQ2HTMLFLAGS) -d ../$(COQ2HTMLDIR) *.v *.glob
+.PHONY: coq2html
